Fixing visual bug on small screens

--- a/client/src/app/components/user-interactions/user-comment/user-comment.component.css
+++ b/client/src/app/components/user-interactions/user-comment/user-comment.component.css
@@ -8,3 +8,9 @@
   .box{
     cursor: pointer;
   }
+  .shorten-content {
+    white-space: normal!important; 
+    word-wrap: break-word!important; 
+    overflow-wrap: break-word !important; /* Alternative for better browser compatibility */
+  }
+  
